syntax = "proto2";

import "reflection/reflection_test_depth_two.proto";

option java_multiple_files = true;
option java_package = "io.grpc.reflection.testing";
option java_outer_classname = "ReflectionTestProto";

package grpc.reflection.testing;

extend ThirdLevelType {
    optional int32 bar = 100;
}

service ReflectableService {
    rpc Method (Request) returns (Reply) {
    }
}