syntax = "proto2";

option java_multiple_files = true;
option java_package = "io.grpc.reflection.testing";
option java_outer_classname = "ReflectionTestDepthThreeProto";

package grpc.reflection.testing;

message EmptyMessage {}

message ThirdLevelType {
    optional string message = 1;
    extensions 100 to 199;
}

message NestedTypeOuter {
    message Middle {
        message Inner {
            optional int32 ival = 1;
        }
    }
}